fix(style): underline overflow and icon

--- a/src/components/Navbar/nav.css
+++ b/src/components/Navbar/nav.css
@@ -20,7 +20,7 @@
 }
 .underline:hover,
 .underline:hover::before {
-  width: 100%;
+  width: 80%;
   visibility: visible;
   transition: all 0.4s ease-in;
   text-decoration: none;
